Improvements to Text Pasteboard History
- Added preferences to enable or disable the Text Pasteboard History in
the Finder Preferences panel. You can also set the history size.
- The Text Pasteboard history now defaults to being disabled, with a
history size of 5 instead of 50.
- Improved the way the Text Pasteboard History works.
- Closes #2179

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -956,6 +956,7 @@
         "highlights4": "Hlgt",
         "histogram": "Histogram",
         "historyIsEmpty": "History is empty",
+        "historySize": "History Size",
         "holdDownShortcutKeyToRepeatAction": "Hold down shortcut key to repeat action.",
         "horizontal": "Horizontal",
         "horizontal4": "Horz",
@@ -1627,6 +1628,7 @@
         "text": "Text",
         "textInspectorCouldNotBeShown": "Text Inspector could not be shown.",
         "textLayer": "Text Layer",
+        "textPasteboardHistory": "Text Pasteboard History",
         "textToSpeechDestination": "Please select where you want to save your audio files:",
         "texture": "Texture",
         "thisCanTakeSeveralMinutes": "This can take several minutes",
