Added Advanced Preference for adjusting Multicam Viewer Quality
- Closes #2178

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -701,6 +701,7 @@
         "finalcutpro_advanced_backupinterval_label": "Advanced: Backup Interval",
         "finalcutpro_advanced_disablewaveforms_label": "Advanced: Waveform Drawing",
         "finalcutpro_advanced_fcpxml_label": "Advanced: FCPXML Import/Export Extras",
+        "finalcutpro_advanced_multicam_label": "Advanced: Multicam Quality",
         "finalcutpro_advanced_playbackrendering_label": "Playback Rendering Controls",
         "finalcutpro_advanced_showtimelineinviewers_label": "Advanced: Show Timeline in Player",
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
@@ -1707,6 +1708,7 @@
         "update": "Update",
         "updateAvailable": "Update Available",
         "updateEffectsListFailed": "Unfortunately the Effects List was not successfully updated.",
+        "useBetterQualityInAnglesViewer": "Use Better Quality in Angles Viewer (requires restart)",
         "useCustomFilename": "Use Custom Filename",
         "useOrientation": "Use Orientation",
         "userAPIKey": "User API Key",
