Added actions to trigger keyboard shortcuts
- These actions don’t appear in the Search Console nor the Shortcuts
preferences panel.
- Closes #2190

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -49,6 +49,7 @@
         "amount": "Amount",
         "amounts": "Amounts",
         "anchor": "Anchor",
+        "and": "and",
         "angle": "Angle",
         "angle3": "ANG",
         "angles": "Angles",
@@ -307,6 +308,7 @@
         "core_preferences_panels_tangent_label": "Preferences Panel: Tangent",
         "core_preferences_updates_label": "Preferences: Updates",
         "core_setup_label": "Manager: Setup",
+        "core_shortcuts_actions_label": "Keyboard Shortcuts",
         "core_shortcuts_prefs_label": "Preferences Panel: Shortcuts",
         "core_streamdeck_banks_label": "Stream Deck Banks",
         "core_streamdeck_manager_label": "Manager: Stream Deck",
@@ -914,6 +916,7 @@
         "global_pasteboard_action": "Text Pasteboard History",
         "global_screencapture_action": "Screen Capture",
         "global_scripts_action": "AppleScript",
+        "global_shortcuts_action": "Keyboard Shortcuts",
         "global_snippets_action": "Snippets",
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
@@ -1038,6 +1041,7 @@
         "kenBurns": "Ken Burns",
         "key": "Key",
         "keyboardShortcut": "Keyboard Shortcut",
+        "keyboardShortcutDescription": "Triggers a virtual keyboard press",
         "keyboardShortcuts": "Keyboard Shortcuts",
         "keyframe": "Keyframe",
         "keywordEditorNotOpened": "The Keyword Editor could not be opened.",
@@ -1317,6 +1321,7 @@
         "premultipliedMix": "Premultiplied Mix",
         "premultipliedMix9": "Premulti",
         "presets": "Presets",
+        "press": "Press",
         "preventMacFromSleeping": "Prevent Mac from Sleeping",
         "previous": "Previous",
         "privacy": "Privacy",
