Tweaks to Viewer Overlays
- The contextual menu that appears when you right-click on the top of
the Final Cut Pro Viewer is now disabled by default. You now have to
click “Enable Viewer Contextual Menu” from the CommandPost menubar to
enable it. This is an attempt to rule out any permission issues related
to the event tap that’s used to detect the right-click.
- Improved how we’re handling creating and destroying event taps in the
Viewer Overlays plugin.
- Closes #2202

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -615,6 +615,7 @@
         "enableShortcutsDuringFullscreen": "Enable Shortcuts During Fullscreen Playback",
         "enableStreamDeck": "Enable Stream Deck",
         "enableTangentPanelSupport": "Enable Tangent Panel Support",
+        "enableViewerContextualMenu": "Enable Viewer Contextual Menu",
         "enableVirtualTouchBar": "Enable Virtual Touch Bar",
         "enableWaveformDrawing": "Enable Waveform Drawing",
         "end": "End",
