Improved Batch Rename HUD
- Added ability to process clip names via Lua Code.
- Added ability to add sequential numbers to clip names.
- Closes #2221

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -29,6 +29,8 @@
         "advanced": "Advanced",
         "advancedFeatures": "Advanced Features",
         "advancedFeaturesWarning": "The below options are hidden Final Cut Pro preferences.<br />If enabled, they'll remain enabled even if CommandPost is not running.<br />Trashing your Final Cut Pro preferences will reset these preferences too.<br />Please use with care, as there's a reason Apple hasn't exposed them.",
+        "afterPrefix": "After Prefix",
+        "afterSuffix": "After Suffix",
         "alignAudioToVideo": "Align Audio to Video",
         "alignment": "Alignment",
         "alignTextToTheCentre_title": "Align text to the centre",
@@ -129,6 +131,7 @@
         "batchRename": "Batch Rename",
         "batchRenameBrowserFail": "The Batch Rename tool could not open the Browser.\n\nPlease open the Browser and try again.",
         "batchRenameFailed": "Batch Rename Failed",
+        "beforePrefix": "Before Prefix",
         "behind": "Behind",
         "behind9": "Behind",
         "below": "Below",
@@ -216,6 +219,7 @@
         "cmdDoesNotExistError": "No command with the ID of %{id} could be found.",
         "cmdGroupNotActivated": "Unable to activate the '%{id}' command group.",
         "cmdIdMissingError": "A command ID is required to execute.",
+        "codeNeedsToReturnAFunction": "The code needs to return a function.",
         "cold": "Cold",
         "color": "Color",
         "colorAndEffects": "Color & Effects",
@@ -606,6 +610,7 @@
         "enableHUD": "Enable HUD",
         "enableiMessageNotifications": "Enable iMessage Notifications",
         "enableLoupdeckSupport": "Enable Loupedeck+ Support",
+        "enableLuaCodeProcessing": "Enable Lua Code Processing",
         "enableMIDI": "Enable MIDI Controls",
         "enablePasteboardHistory": "Enable Pasteboard History",
         "enableProwlNotifications": "Enable Prowl Notifications",
@@ -1094,6 +1099,8 @@
         "loupedeckResetGroupConfirmation": "This will reset all Loupedeck+ items in the current application to the default values.",
         "loupedeckResetSubGroupConfirmation": "This will reset all Loupedeck+ items in the current bank to the default values.",
         "low": "Low",
+        "luaCode": "Lua Code",
+        "luaCodeCouldNotBeProcessed": "The Lua code could not be processed.",
         "macOS": "macOS",
         "magicButton": "Magic Button",
         "marker": "Marker",
@@ -1246,6 +1253,7 @@
         "overrideFolderNamePrompt": "Please enter a folder for the pasteboard item:",
         "overrideValueInvalid": "The value you entered is not valid.\n\nPlease try again.",
         "overwriteToPrimaryStoryline": "Overwrite to Primary Storyline",
+        "padding": "Padding",
         "pan": "Pan",
         "pasteboard": "Pasteboard",
         "pasteboardBuffer": "Pasteboard Buffer",
@@ -1474,6 +1482,7 @@
         "sendToCompressor": "Send to Compressor",
         "sendToFinalCutPro": "Send to Final Cut Pro",
         "sendToPasteboard": "Send To Pasteboard",
+        "sequence": "Sequence",
         "setBrowserDurationTo": "Set Browser Duration to",
         "setCameraLUTToNone": "Set Camera LUT to None",
         "setFilenamePrefix": "Set Filename Prefix",
@@ -1587,10 +1596,12 @@
         "stabilizationMethod": "Stabilization Method",
         "start": "Start",
         "startScan": "Start Scan",
+        "startWith": "Start with",
         "stencilAlpha": "Stencil Alpha",
         "stencilAlpha9": "Stencil A",
         "stencilLuma": "Stencil Luma",
         "stencilLuma9": "Stencil L",
+        "stepValue": "Step value",
         "stereoLeftRight": "Stereo Left/Right",
         "stereoLeftRight9": "Stereo",
         "stillFrames": "Still Frames",
