Bug Fixes & New Features
- Added an optional `errorCallbackFn` to `cp.json.prop`.
- `cp.tools.ensureDirectoryExists` now returns `nil` if the `rootPath`
is not valid.
- Now ignoring Flash Drive confirmation on Loupedeck CT API.
- Added non-keyboard shortcut actions for Browser Clip Height & Browser
Duration.
- Added actions for double tap and two finger tap to Loupedeck CT Touch
Screens.
- Improved saving settings to Flash Drive.
- Added preference to turn on/off the Flash Drive.
- Removed unnecessary `default.lua` file.
- Added ability to add custom Applications to Loupedeck CT preferences
panel.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -179,10 +179,10 @@
         "captureScreenToClipboardDescription": "Capture the current screen to the clipboard",
         "category": "Category",
         "center": "Center",
-        "changeBrowserClipHeightDown_title": "Browser Clip Height Decrease",
-        "changeBrowserClipHeightUp_title": "Browser Clip Height Increase",
-        "changeBrowserDurationDown_title": "Browser Duration Decrease",
-        "changeBrowserDurationUp_title": "Browser Duration Increase",
+        "changeBrowserClipHeightDown": "Browser Clip Height Decrease",
+        "changeBrowserClipHeightUp": "Browser Clip Height Increase",
+        "changeBrowserDurationDown": "Browser Duration Decrease",
+        "changeBrowserDurationUp": "Browser Duration Increase",
         "changeCustomFilename": "Change Custom Filename",
         "changeDestinationFolder": "Change Destination Folder",
         "changeDestinationFolderInCompressor": "Change Destination Folder in Compressor",
