Work in progress
- Added missing i18n for Loupedeck CT banks
- Fixed bug in Search Console where toggling “Search Subtext” wouldn’t
take affect until the Search Console was closed and re-opened.
- Changed titles of keyboard shortcut actions to make them easier to
search for.
- Started building knob icons.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -928,6 +928,7 @@
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
+        "global_loupedeckct_banks_action": "Loupedeck CT Banks",
         "glow": "Glow",
         "goTo": "Go to",
         "goToBeginning": "Go to Beginning",
