--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -549,6 +549,7 @@
         "dark": "Dark",
         "darken": "Darken",
         "darken9": "Darken",
+        "daVinciResolve": "DaVinci Resolve",
         "decrease": "Decrease",
         "decreaseClipHeight": "Decrease Clip Height",
         "default": "Default",
@@ -556,6 +557,7 @@
         "deleteAfterImport": "Delete file from Watch Folder (%{numberOfSeconds} %{seconds} after Import)",
         "deleteFileAfterImport": "Delete Generated File After Import",
         "deleteNote": "Make sure <strong>Copy to library storage location</strong> is selected in Final Cut Pro's Preferences.",
+        "deleteSnippetConfirmation": "Are you sure you want to delete this Snippet?",
         "depth": "Depth",
         "depthDirection": "Depth Direction",
         "description": "Description",
@@ -739,8 +741,6 @@
         "finalcutpro_fullscreen_shortcuts_label": "Fullscreen Shortcuts",
         "finalcutpro_fullscreen_stopped_label": "Play Full Screen & Stop",
         "finalCutPro_group": "Final Cut Pro",
-        "resolve_group": "DaVinci Resolve",
-        "daVinciResolve": "DaVinci Resolve",
         "finalcutpro_hud_label": "HUD",
         "finalcutpro_hud_manager_label": "HUD: Manager",
         "finalcutpro_hud_panels_fcpxml_label": "HUD: FCPXML Panel",
@@ -920,6 +920,7 @@
         "global_cmds_action": "Global Commands",
         "global_command_group": "All Applications",
         "global_loupedeckbanks_action": "Loupedeck+ Banks",
+        "global_loupedeckct_banks_action": "Loupedeck CT Banks",
         "global_menuactions_action": "Active Application Menu Items",
         "global_midibanks_action": "MIDI Banks",
         "global_pasteboard_action": "Text Pasteboard History",
@@ -930,7 +931,6 @@
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
-        "global_loupedeckct_banks_action": "Loupedeck CT Banks",
         "glow": "Glow",
         "goTo": "Go to",
         "goToBeginning": "Go to Beginning",
@@ -1395,6 +1395,7 @@
         "resetSelectedControl": "Reset Selected Control",
         "resetShortcuts": "Reset to Default Shortcuts",
         "resetShortcutsAllToNone": "Set All Shortcuts to None",
+        "resolve_group": "DaVinci Resolve",
         "restart": "Restart",
         "restartCommandPostNow": "Would you like to restart CP now?",
         "restore": "Restore",
@@ -1557,8 +1558,8 @@
             "other": "Shift Scale Up by %{amount} Pixels"
         },
         "shortcut_group_fcpx": "Final Cut Pro",
-        "shortcut_group_resolve": "DaVinci Resolve",
         "shortcut_group_global": "All Applications",
+        "shortcut_group_resolve": "DaVinci Resolve",
         "shortcutAlreadyInUse": "This shortcut is already in use.",
         "shortcutAlreadyInUseByMacOS": "This shortcut combination is currently in use by macOS (i.e. it could be used by Screen Capture, Universal Access, and Keyboard Navigation keys).",
         "shortcutCouldNotBeTriggered": "This shortcut could not be triggered.\n\nPlease check that you valid shortcut keys assigned to command you've tried to trigger in the Final Cut Pro Command Editor and try again.",
