Changed "Shortcuts" to "Keyboard"

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -707,6 +707,7 @@
         "film": "Film",
         "filterBrowserBeforeSearch": "Filter Browser Before Search",
         "filterShortcuts": "Filter Shortcuts",
+        "keyboard": "Keyboard",
         "finalCutPro": "Final Cut Pro",
         "finalcutpro_actions_custom_label": "Shortcuts: Custom Actions",
         "finalcutpro_advanced_backupinterval_label": "Advanced: Backup Interval",
