--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -77,6 +77,8 @@
         "areYouConnectedToTheInternet": "Are you actually connected to the Internet?",
         "areYouSureTheresSomethingOnThePasteboard": "Are you sure there's something in the Final Cut Pro Pasteboard?",
         "areYouSureTheXMLIsValid": "Are you sure the XML is valid?",
+        "areYouSureYouWantToStoreYourSettingsOnTheLoupedeckCTFlashDrive": "Are you sure you want to store your settings on the Loupedeck CT Flash Drive?",
+        "areYouSureYouWantToStoreYourSettingsOnTheLoupedeckCTFlashDriveDescription": "Enabling this option will tell CommandPost to read and write the settings to and from the connected Loupedeck CT's internal Flash Drive.\n\nIf your Loupedeck CT has settings already stored on it, those settings will overwrite whatever is locally stored on your Mac. However, for safety, before they're overwritten they will be backed up with today's date and time in CommandPost's Settings Folder.\n\nIf there are no existing settings on the Loupedeck CT Flash Drive, then the settings from the Mac will be copied to the Loupedeck CT.",
         "assignAction": "Assign Action",
         "atLeastOneBrowserClipMustBeSelected": "At least one clip must be selected in the browser to use this feature.",
         "attachLog": "Attach the entire contents of the CommandPost Debug Console.",
@@ -252,6 +254,7 @@
         "components": "Components",
         "compoundClip": "Compound Clip",
         "compressor": "Compressor",
+        "compressor_application_manager_label": "Application Manager",
         "compressor_feedback_bugreport_label": "Help & Support: Report Bug to Apple",
         "compressor_watchfolders_panels_media_label": "Watch Folders: Compressor",
         "compressorError": "Something went wrong when sending to Compressor.",
@@ -265,17 +268,25 @@
         "controlFCPUIElementAbsolute": "Control Final Cut Pro User Interface Element (Absolute)",
         "controlFCPUIElementRelative": "Control Final Cut Pro User Interface Element (Relative)",
         "controlFCPUIElementRelativeNote": "Hover mouse over a UI Element, hold CONTROL, then adjust MIDI Knob/Fader to register.",
+        "controlSurfaces": "Control Surfaces",
+        "copyApplication": "Copy Application",
+        "copyBank": "Copy Bank",
+        "copyControlToAllBanks": "Copy Control to All Banks",
         "copyTitleTextContentsToPasteboard": "Copy Title Text Contents to Pasteboard",
         "copyToFinalCutProPasteboardBuffer": "Copy to Final Cut Pro Pasteboard Buffer %{id}",
         "core_accessibility_label": "Accessibility Permissions",
+        "core_accessibility_screenrecording_label": "Screen Recording Permissions",
         "core_action_manager_label": "Manager: Actions",
+        "core_application_manager_label": "Application Manager",
         "core_commands_actions_label": "Commands Actions",
         "core_commands_global_label": "Global Commands",
         "core_console_applications_label": "Console: Applications",
         "core_console_label": "Console",
         "core_console_scripts_label": "Console: Scripts",
+        "core_controlsurfaces_manager_label": "Control Surfaces Manager",
         "core_disk_automount_label": "Disk Automount",
         "core_disk_favourites_label": "Disk Favourites",
+        "core_display_label": "Display Brightness Actions",
         "core_helpandsupport_credits_label": "Help & Support: Credits",
         "core_helpandsupport_debugconsole_label": "Help & Support: Debug Console",
         "core_helpandsupport_developerguide_label": "Help & Support: Developer Guide",
@@ -284,6 +295,8 @@
         "core_helpandsupport_feedback_label": "Help & Support: Feedback",
         "core_helpandsupport_userguide_label": "Help & Support: User Guide",
         "core_language_label": "Language Module",
+        "core_loupedeckct_manager_label": "Loupedeck CT Manager",
+        "core_loupedeckct_prefs_label": "Preferences: Loupedeck CT",
         "core_loupedeckplus_banks_label": "Loupedeck+: Banks",
         "core_loupedeckplus_prefs_label": "Preferences: Loupedeck+",
         "core_menu_bottom_label": "Menubar: Bottom Section",
@@ -579,6 +592,7 @@
         "distort": "Distort",
         "dockIcon": "Dock Icon",
         "done": "Done",
+        "doubleTap": "Double Tap",
         "down": "Down",
         "downloadTangentHub": "Download Tangent Hub",
         "doYouWantToContinue": "Do you want to continue?",
@@ -609,9 +623,11 @@
         "enableDisableBalanceColor": "Enable/Disable Balance Color",
         "enableDockIcon": "Enable Dock Icon",
         "enableFilenamePrefix": "Enable Filename Prefix",
+        "enableFlashDrive": "Enable Flash Drive",
         "enableHUD": "Enable HUD",
         "enableiMessageNotifications": "Enable iMessage Notifications",
         "enableLoupdeckSupport": "Enable Loupedeck+ Support",
+        "enableLoupedeckCTSupport": "Enable Loupedeck CT Support",
         "enableLuaCodeProcessing": "Enable Lua Code Processing",
         "enableMIDI": "Enable MIDI Controls",
         "enablePasteboardHistory": "Enable Pasteboard History",
@@ -643,6 +659,7 @@
         "exclusion9": "Exclusion",
         "executeLuaCodeSnippet": "Execute Lua Code Snippet",
         "expandAudio": "Expand Audio",
+        "exportSettings": "Export Settings",
         "exposure": "Exposure",
         "extendEdit": "Extend Edit",
         "extraHigh": "Extra High",
@@ -707,7 +724,6 @@
         "film": "Film",
         "filterBrowserBeforeSearch": "Filter Browser Before Search",
         "filterShortcuts": "Filter Shortcuts",
-        "keyboard": "Keyboard",
         "finalCutPro": "Final Cut Pro",
         "finalcutpro_actions_custom_label": "Shortcuts: Custom Actions",
         "finalcutpro_advanced_backupinterval_label": "Advanced: Backup Interval",
@@ -716,6 +732,7 @@
         "finalcutpro_advanced_multicam_label": "Advanced: Multicam Quality",
         "finalcutpro_advanced_playbackrendering_label": "Playback Rendering Controls",
         "finalcutpro_advanced_showtimelineinviewers_label": "Advanced: Show Timeline in Player",
+        "finalcutpro_application_manager_label": "Application Manager",
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
         "finalcutpro_browser_appearanceandfiltering_label": "Browser: Appearance & Filtering",
         "finalcutpro_browser_clearnotes_label": "Browser: Clear Notes",
@@ -880,6 +897,8 @@
         "finalCutProTimelineBatchExportMessage": "Final Cut Pro will export the %{clipCountString}selected %{itemString} in the timeline to the following location:",
         "find": "Find",
         "finder": "Finder",
+        "finder_application_manager_label": "Application Manager",
+        "finder_audio_label": "Audio Actions",
         "finder_dateandtime_label": "Finder: Date & Time",
         "finder_pasteboard_history_label": "Text Pasteboard History",
         "finder_pasteboard_label": "Finder: Pasteboard Tools",
@@ -970,6 +989,7 @@
         "highlights2": "HL",
         "highlights4": "Hlgt",
         "histogram": "Histogram",
+        "history": "History",
         "historyIsEmpty": "History is empty",
         "historySize": "History Size",
         "holdDownShortcutKeyToRepeatAction": "Hold down shortcut key to repeat action.",
@@ -995,17 +1015,20 @@
         "iftttServerFailed": "IFTTT Server Connection Error",
         "iftttSignup": "Signup for a IFTTT Account",
         "ignore": "Ignore",
+        "ignoreApplication": "Ignore Application",
         "ignoreBackgroundTasks": "Ignore Background Tasks Warning",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore ESC Key when Final Cut Pro is Fullscreen",
         "ignoreInsertedCameraCards": "Ignore Inserted Camera Cards",
         "ignoreInvalidCaptions": "Ignore Invalid Captions Warning",
         "ignoreMissingEffects": "Ignore Missing & Offline Files Warning",
         "ignoreProxies": "Ignore Proxies Warning",
+        "imageDropZone": "Image Drop Zone",
         "iMessageDestination": "Mobile/Apple ID",
         "iMessageMissingDestination": "Phone Number or Apple ID Required",
         "iMessageMissingMessage": "You must enter a valid phone number or Apple ID before enabling iMessage Notifications.",
         "iMessageNotifications": "iMessage Notifications",
         "import": "Import",
+        "importSettings": "Import Settings",
         "importToTimeline": "Import directly into Timeline",
         "in": "In",
         "inAndOut": "In & Out",
@@ -1051,6 +1074,7 @@
         "keepOriginalValue": "Keep Original Value",
         "kenBurns": "Ken Burns",
         "key": "Key",
+        "keyboard": "Keyboard",
         "keyboardShortcut": "Keyboard Shortcut",
         "keyboardShortcutDescription": "Triggers a virtual keyboard press",
         "keyboardShortcuts": "Keyboard Shortcuts",
@@ -1069,6 +1093,7 @@
         "layoutEditor": "Layout Editor",
         "learn": "Learn",
         "leaveFilesInPlaceOnImport": "Leave Files In Place On Import",
+        "ledColor": "LED Color",
         "left": "Left",
         "leftSurroundToRightFront": "Left Surround to Right Front",
         "leftSurroundToRightFront9": "Left2Rght",
@@ -1103,6 +1128,8 @@
         "loupedeckCTResetAllConfirmation": "This will reset all Loupedeck CT items across all applications to the default values.",
         "loupedeckCTResetApplicationConfirmation": "This will reset all Loupedeck CT items in the current application to the default values.",
         "loupedeckCTResetBankConfirmation": "This will reset all Loupedeck CT items in the current bank to the default values.",
+        "loupedeckCTStoreSettingsOnFlashDriveLineOne": "<strong>Store settings on Flash Drive</strong> is enabled, but no Loupedeck CT is detected.",
+        "loupedeckCTStoreSettingsOnFlashDriveLineTwo": "Please connect your Loupedeck CT to allow configuration.",
         "loupedeckPlus": "Loupedeck+",
         "loupedeckResetAllConfirmation": "This will reset all Loupedeck+ items across all applications to the default values.",
         "loupedeckResetGroupConfirmation": "This will reset all Loupedeck+ items in the current application to the default values.",
@@ -1165,6 +1192,7 @@
         "modifierKey": "Modifier Key",
         "modifyProject": "Modify Project",
         "monitor": "Monitor",
+        "motion_application_manager_label": "Application Manager",
         "motion_feedback_bugreport_label": "Help & Support: Report Bug to Apple",
         "mountExternalDrives_title": "Mount External Drives",
         "mountingExternalDrivesMsg": "Mounting external drives...",
@@ -1294,8 +1322,10 @@
         "playPowerChimeSound": "Play chime sound when laptop power is connected",
         "playSelection": "Play Selection",
         "playToEnd": "Play to End",
+        "pleaseDisconnectAndReconnectYourLoupedeckCT": "Please disconnect and reconnect your Loupedeck CT.",
         "pleaseEnterAPrefix": "Please enter a prefix",
         "pleasePickAFolderToUseAsAFavourite": "Please pick a folder to use as a favourite",
+        "pleaseSelectAnApplication": "Please select an application",
         "pleaseSelectAnIcon": "Please select an icon:",
         "pleaseSelectATitle": "Please select a title in the timeline and try again.",
         "pleaseSelectSingleClipInTimeline": "Please select a single clip in the Timeline.",
@@ -1310,6 +1340,7 @@
         "plugin_group_finder": "Finder",
         "plugin_group_motion": "Motion",
         "plugin_group_plugin": "Plugin",
+        "plugin_group_resolve": "DaVinci Resolve",
         "plugin_status_active": "Active",
         "plugin_status_disabled": "Disabled",
         "plugin_status_error": "Failed",
@@ -1341,6 +1372,7 @@
         "premultipliedMix9": "Premulti",
         "presets": "Presets",
         "press": "Press",
+        "pressAction": "Press Action",
         "preventMacFromSleeping": "Prevent Mac from Sleeping",
         "previous": "Previous",
         "privacy": "Privacy",
@@ -1390,13 +1422,16 @@
         "resetBank": "Reset Bank",
         "resetBrowserLayoutForSelectedCollection_title": "Reset Browser Layout for Selected Collection",
         "resetButton": "Reset Button",
+        "resetControl": "Reset Control",
         "resetCurrentEffectPane": "Reset Current Effect Pane",
         "resetEverything": "Reset Everything",
         "resetIncrementalNumber": "Reset Incremental Number",
         "resetSelectedControl": "Reset Selected Control",
         "resetShortcuts": "Reset to Default Shortcuts",
         "resetShortcutsAllToNone": "Set All Shortcuts to None",
+        "resolve_application_manager_label": "Application Manager",
         "resolve_group": "DaVinci Resolve",
+        "resolve_manager_label": "Resolve Manager",
         "restart": "Restart",
         "restartCommandPostNow": "Would you like to restart CP now?",
         "restore": "Restore",
@@ -1591,6 +1626,10 @@
         "six": "6",
         "sixtyHz": "60Hz",
         "skip": "Skip",
+        "slideDownAction": "Slide Down Action",
+        "slideLeftAction": "Slide Left Action",
+        "slideRightAction": "Slide Right Action",
+        "slideUpAction": "Slide Up Action",
         "smoothCam": "SmoothCam",
         "snippetAlreadyExists": "A Snippet with this name already exists.",
         "snippetEnterLabel": "Please enter a unique label for the snippet:",
@@ -1618,6 +1657,7 @@
         "stillFrames": "Still Frames",
         "stills": "Stills",
         "stop": "Stop",
+        "storeSettingsOnFlashDrive": "Store settings on Flash Drive",
         "streamDeck": "Stream Deck",
         "streamDeckAppRunning": "Stream Deck App is running.",
         "streamDeckAppRunningMessage": "This must be closed to activate Stream Deck support in CommandPost.",
@@ -1658,6 +1698,7 @@
         "testTitle": "CommandPost Test",
         "text": "Text",
         "textInspectorCouldNotBeShown": "Text Inspector could not be shown.",
+        "textLabel": "Text Label",
         "textLayer": "Text Layer",
         "textPasteboardHistory": "Text Pasteboard History",
         "textToSpeechDestination": "Please select where you want to save your audio files:",
@@ -1679,6 +1720,7 @@
         "tip": "Tip",
         "title": "Title",
         "title_group": "Title",
+        "toEnableTheFlashDriveOnLoupedeckCT": "To enable the Flash drive you need to restart your device by disconnecting it from your computer and reconnecting it.",
         "toggle": "Toggle",
         "toggleAutomaticScriptReloading": "Auto Reload",
         "toggleColorCorrectionEffects": "Toggle Color Correction Effects",
@@ -1720,9 +1762,12 @@
         "trimToggle": "Trim Toggle",
         "trimToggleDescription": "Hold down MIDI button for Trim Tool, then release for Select Tool.",
         "trimToPlayhead": "Trim To Playhead",
+        "turnLeftAction": "Turn Left Action",
         "turnLeftDown": "Turn Left/Down",
+        "turnRightAction": "Turn Right Action",
         "turnRightUp": "Turn Right/Up",
         "two": "2",
+        "twoFingerTap": "Two Finger Tap",
         "type": "Type",
         "typeDateAndTime_title": "Type Date & Time",
         "typeface": "Typeface",
@@ -1753,6 +1798,7 @@
         "version": "Version",
         "vertical": "Vertical",
         "vertical4": "Vert",
+        "vibrateWhenPressed": "Vibrate When Pressed",
         "video": "Video",
         "videoEffect_group": "Video Effect",
         "videoWaveform": "Video Waveform",
@@ -1763,7 +1809,6 @@
         "viewer": "Viewer",
         "viewer_group": "Viewer",
         "viewerOverlay": "Viewer Overlay",
-        "controlSurfaces": "Control Surfaces",
         "viewGreenColorChannel": "View Green Color Channel",
         "viewOptions": "View Options",
         "viewRedColorChannel": "View Red Color Channel",
