--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -15,6 +15,7 @@
         "activatorUnhideAction": "Unhide",
         "add": "Add",
         "add9": "Add",
+        "addApplication": "Add Application",
         "addColorBoardEffect": "Add Color Board Effect",
         "addColorCurvesEffect": "Add Color Curves Effect",
         "addColorWheelsEffect": "Add Color Wheels Effect",
@@ -37,6 +38,7 @@
         "alignTextToTheLeft_title": "Align text to the left",
         "alignTextToTheRight_title": "Align text to the right",
         "all": "All",
+        "allApplications": "All Applications",
         "allCaps": "All Caps",
         "allClips": "All Clips",
         "allowAccessibility": "Allow Accessibility",
@@ -269,11 +271,17 @@
         "controlFCPUIElementRelative": "Control Final Cut Pro User Interface Element (Relative)",
         "controlFCPUIElementRelativeNote": "Hover mouse over a UI Element, hold CONTROL, then adjust MIDI Knob/Fader to register.",
         "controlSurfaces": "Control Surfaces",
+        "copyActiveApplicationTo": "Copy Active Application To",
+        "copyActiveBankTo": "Copy Active Bank To",
         "copyApplication": "Copy Application",
         "copyBank": "Copy Bank",
         "copyControlToAllBanks": "Copy Control to All Banks",
+        "copyDevice": "Copy Device",
+        "copyDeviceTo": "Copy Device To",
         "copyTitleTextContentsToPasteboard": "Copy Title Text Contents to Pasteboard",
         "copyToFinalCutProPasteboardBuffer": "Copy to Final Cut Pro Pasteboard Buffer %{id}",
+        "copyUnit": "Copy Unit",
+        "copyUnitTo": "Copy Unit To",
         "core_accessibility_label": "Accessibility Permissions",
         "core_accessibility_screenrecording_label": "Screen Recording Permissions",
         "core_action_manager_label": "Manager: Actions",
@@ -551,7 +559,11 @@
         "cropTypes": "Crop Types",
         "crossDissolve": "Cross Dissolve",
         "crossHair": "Cross Hair",
+        "currentApplication": "Current Application",
+        "currentBank": "Current Bank",
+        "currentDevice": "Current Device",
         "currentIncrementalNumber": "Incremental Number",
+        "currentUnit": "Current Unit",
         "custom": "Custom",
         "customFilename": "Custom Filename",
         "customiseFinderTag": "Customise Finder Tag",
@@ -644,9 +656,6 @@
         "enableWaveformDrawing": "Enable Waveform Drawing",
         "end": "End",
         "english": "English",
-        "resetDevice": "Reset Device",
-        "resetUnit": "Reset Unit",
-        "unit": "Unit",
         "enterCustomFilename": "Please enter a custom filename below.\n\nYou can also use these optional variables:\n\n{original} = Original Clip Name\n{yyyy} = Year\n{yy} = Year\n{mm} = Month\n{dd} = Day\n{hh} = Hour\n{mm} = Minutes\n{ss} = Seconds",
         "enterCustomFilenameError": "This filename looks invalid. Please try again.",
         "enterFinderTag": "Please enter the Finder Tag you want to use:",
@@ -656,6 +665,7 @@
         "errorProcessingThePasteboard": "There was an error processing the Pasteboard.",
         "errorWritingToPasteboard": "There was an error writing to the Pasteboard.",
         "eventViewer": "Event Viewer",
+        "everything": "Everything",
         "exactMatch": "Exact Match",
         "examples": "Examples",
         "exclusion": "Exclusion",
@@ -1032,20 +1042,6 @@
         "iMessageNotifications": "iMessage Notifications",
         "import": "Import",
         "importSettings": "Import Settings",
-
-        "copyDevice": "Copy Device",
-        "copyUnit": "Copy Unit",
-        "copyDeviceTo": "Copy Device To",
-        "copyUnitTo": "Copy Unit To",
-        "everything": "Everything",
-
-        "currentDevice": "Current Device",
-        "currentUnit": "Current Unit",
-        "currentApplication": "Current Application",
-        "currentBank": "Current Bank",
-        "pleaseSelectAFolderToExportTo": "Please select a folder to export to",
-        "pleaseSelectAFileToImport": "Please select a file to import",
-
         "importToTimeline": "Import directly into Timeline",
         "in": "In",
         "inAndOut": "In & Out",
@@ -1139,17 +1135,13 @@
         "loopSearch": "Loop Search",
         "loudness": "Loudness",
         "loudness9": "Loudness",
+        "loupedeckAppTip": "The official Loupedeck application is not compatible with CommandPost and can't be used at the same time.",
         "loupedeckBankDescription": "Changes the Loupedeck+ Bank",
         "loupedeckCT": "Loupedeck CT",
         "loupedeckCTBankDescription": "Changes the Loupedeck CT Bank",
-
-
         "loupedeckCTResetAllConfirmation": "This will reset all Loupedeck CT items across all applications to the default values.",
         "loupedeckCTResetApplicationConfirmation": "This will reset all Loupedeck CT items in the current application to the default values.",
         "loupedeckCTResetBankConfirmation": "This will reset all Loupedeck CT items in the current bank to the default values.",
-
-
-
         "loupedeckCTStoreSettingsOnFlashDriveLineOne": "<strong>Store settings on Flash Drive</strong> is enabled, but no Loupedeck CT is detected.",
         "loupedeckCTStoreSettingsOnFlashDriveLineTwo": "Please connect your Loupedeck CT to allow configuration.",
         "loupedeckPlus": "Loupedeck+",
@@ -1179,6 +1171,7 @@
         "menubarPanelTooltip": "Menubar Preferences",
         "menuChoiceSubText": "Menu: %{path}",
         "menuItemCouldNotBeTriggeredSuccessfully": "The menu item could not be triggered successfully.",
+        "merge": "Merge",
         "method": "Method",
         "methods": "Methods",
         "middle": "Middle",
@@ -1229,7 +1222,6 @@
         "mustHaveSingleClipSelectedInTimeline": "You need to have a single clip selected in the timeline to use this feature.",
         "mustInstallTangentMapper": "You must install the Tangent Mapper & Hub to enable Tangent Panel support.",
         "mute": "Mute",
-        "unmute": "Unmute",
         "mute10": "Mute",
         "mute9": "Mute",
         "needsToRestartToUpdateConsole": "CP needs to restart to update Console.",
@@ -1348,6 +1340,8 @@
         "pleaseDisconnectAndReconnectYourLoupedeckCT": "Please disconnect and reconnect your Loupedeck CT.",
         "pleaseEnterAPrefix": "Please enter a prefix",
         "pleasePickAFolderToUseAsAFavourite": "Please pick a folder to use as a favourite",
+        "pleaseSelectAFileToImport": "Please select a file to import",
+        "pleaseSelectAFolderToExportTo": "Please select a folder to export to",
         "pleaseSelectAnApplication": "Please select an application",
         "pleaseSelectAnIcon": "Please select an icon:",
         "pleaseSelectATitle": "Please select a title in the timeline and try again.",
@@ -1432,7 +1426,6 @@
         "renameClip": "Rename Clip",
         "renderComplete": "Render Complete!",
         "replace": "Replace",
-        "merge": "Merge",
         "replaceAll": "Replace All",
         "replaceExistingFiles": "Replace Existing Files",
         "replaceSelectedTitleTextwithPasteboardContents": "Replace Selected Title Text with Pasteboard Contents",
@@ -1448,11 +1441,13 @@
         "resetButton": "Reset Button",
         "resetControl": "Reset Control",
         "resetCurrentEffectPane": "Reset Current Effect Pane",
+        "resetDevice": "Reset Device",
         "resetEverything": "Reset Everything",
         "resetIncrementalNumber": "Reset Incremental Number",
         "resetSelectedControl": "Reset Selected Control",
         "resetShortcuts": "Reset to Default Shortcuts",
         "resetShortcutsAllToNone": "Set All Shortcuts to None",
+        "resetUnit": "Reset Unit",
         "resolve_application_manager_label": "Application Manager",
         "resolve_group": "DaVinci Resolve",
         "resolve_manager_label": "Resolve Manager",
@@ -1585,6 +1580,14 @@
         "shareSuccessful": "Share Successful\n%{info}",
         "shareUnknown": "Type: %{type}",
         "sharp": "Sharp",
+        "shiftOpacityLeft": {
+            "one": "Shift Opacity Left by %{amount} Unit",
+            "other": "Shift Opacity Left by %{amount} Units"
+        },
+        "shiftOpacityRight": {
+            "one": "Shift Opacity Right by %{amount} Unit",
+            "other": "Shift Opacity Right by %{amount} Units"
+        },
         "shiftPositionDownPixels": {
             "one": "Shift Position Down %{amount} Pixel",
             "other": "Shift Position Down %{amount} Pixels"
@@ -1618,7 +1621,6 @@
             "other": "Shift Scale Up by %{amount} Pixels"
         },
         "shortcut_group_fcpx": "Final Cut Pro",
-        "allApplications": "All Applications",
         "shortcut_group_global": "All Applications",
         "shortcut_group_resolve": "DaVinci Resolve",
         "shortcutAlreadyInUse": "This shortcut is already in use.",
@@ -1633,7 +1635,6 @@
         "shortcutsResetConfirmation": "This will reset all modified shortcuts to the default values.",
         "shortcutsSetNoneConfirmation": "This will reset all of the shortcuts to None.",
         "show": "Show",
-        "addApplication": "Add Application",
         "showAll": "Show All",
         "showGenerators": "Show Generators",
         "showHiddenFCPXMLExportOptions": "Show Hidden FCPXML Export Options",
@@ -1688,22 +1689,15 @@
         "streamDeckAppRunning": "Stream Deck App is running.",
         "streamDeckAppRunningMessage": "This must be closed to activate Stream Deck support in CommandPost.",
         "streamDeckAppTip": "The official Stream Deck application is not compatible with CommandPost and can't be used at the same time.",
-        "loupedeckAppTip": "The official Loupedeck application is not compatible with CommandPost and can't be used at the same time.",
         "streamDeckBankDescription": "Changes the Stream Deck Bank",
         "streamdeckPanelLabel": "Stream Deck",
         "streamdeckPanelTooltip": "Stream Deck Preferences",
         "streamDeckReset": "Reset All Stream Deck Items",
-
-
-        "streamDeckResetEverythingConfirmation": "This will reset all Stream Deck items across all devices to the default values.",
-        "streamDeckResetDeviceConfirmation": "This will reset all Stream Deck items of the same device type to the default values.",
-        "streamDeckResetUnitConfirmation": "This will reset all Stream Deck items for this particular unit to the default values.",
         "streamDeckResetApplicationConfirmation": "This will reset all Stream Deck items in the current application to the default values.",
         "streamDeckResetBankConfirmation": "This will reset all Stream Deck items in the current bank to the default values.",
-
-		"copyActiveApplicationTo": "Copy Active Application To",
-		"copyActiveBankTo": "Copy Active Bank To",
-
+        "streamDeckResetDeviceConfirmation": "This will reset all Stream Deck items of the same device type to the default values.",
+        "streamDeckResetEverythingConfirmation": "This will reset all Stream Deck items across all devices to the default values.",
+        "streamDeckResetUnitConfirmation": "This will reset all Stream Deck items for this particular unit to the default values.",
         "subcomponent": "Subcomponent",
         "subcomponents": "Subcomponents",
         "subtract": "Subtract",
@@ -1809,10 +1803,12 @@
         "types": "Types",
         "undo": "Undo",
         "uninstall": "Uninstall",
+        "unit": "Unit",
         "unknown": "Unknown",
         "unknownError": "Unknown Error",
         "unmountExternalDrives_title": "Unmount External Drives",
         "unmountingExternalDrivesMsg": "Unmounting external drives...",
+        "unmute": "Unmute",
         "unused": "Unused",
         "up": "Up",
         "update": "Update",
