--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -969,6 +969,8 @@
         "goToBeginning": "Go to Beginning",
         "goToColorInspector": "Go to Color Inspector",
         "goToEnd": "Go to End",
+        "goToFilmstripModeInBrowser": "Go To Filmstrip Mode in Browser",
+        "goToListModeInBrowser": "Go to List Mode in Browser",
         "goToNextFrameWithMutedAudio": "Go to Next Frame (with muted audio)",
         "goToNextFrameWithMutedAudioDescription": "Move the playhead to the next frame with muted audio.",
         "goToPreviousFrameWithMutedAudio": "Go to Previous Frame (with muted audio)",
