--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -271,6 +271,7 @@
         "controlFCPUIElementRelative": "Control Final Cut Pro User Interface Element (Relative)",
         "controlFCPUIElementRelativeNote": "Hover mouse over a UI Element, hold CONTROL, then adjust MIDI Knob/Fader to register.",
         "controlSurfaces": "Control Surfaces",
+        "copy": "Copy",
         "copyActiveApplicationTo": "Copy Active Application To",
         "copyActiveBankTo": "Copy Active Bank To",
         "copyApplication": "Copy Application",
@@ -1311,6 +1312,7 @@
         "overwriteToPrimaryStoryline": "Overwrite to Primary Storyline",
         "padding": "Padding",
         "pan": "Pan",
+        "paste": "Paste",
         "pasteboard": "Pasteboard",
         "pasteboardBuffer": "Pasteboard Buffer",
         "pasteboardEditor": "Pasteboard Editor",
@@ -1882,6 +1884,8 @@
         "xml": "XML",
         "yellow": "Yellow",
         "yes": "Yes",
+        "youCannotDragItemsBetweenDifferentControlTypes": "You cannot drag items between different control types.",
+        "youCannotDragItemsBetweenDifferentControlTypesDescription": "Currently you can only drag items of the same control type (i.e. button to button, or knob to knob). Please try again.",
         "zoom": "Zoom",
         "zoomSlider": "Zoom Slider",
         "zoomSliderDescription": "Allows you to control timeline zoom.",
