Work in progress
- Removed `xml2lua`.
- Added ability to modify `stringValues` in `hs._asm.xml`.
- Renamed “Utilities” to “Toolbox”.
- Rewrote the main FCPXML Titles Processor code to use `hs._asm.xml`.
- Added options for "Trim whitespace”, “Remove line breaks” and “Send
to Final Cut Pro”.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1765,6 +1765,7 @@
         "togglePlayerBackground": "Toggle Player Background",
         "toggleVideoScopesInEventViewer": "Toggle Video Scopes in Event Viewer",
         "toggleVideoScopesInViewer": "Toggle Video Scopes in Viewer",
+        "toolbox": "Toolbox",
         "tools": "Tools",
         "top": "Top",
         "topCentreOfTimeline": "Top Centre of Timeline",
