--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -56,6 +56,7 @@
         "amounts": "Amounts",
         "anchor": "Anchor",
         "and": "and",
+        "aNewFCPXMLHasBeenExportedSuccessfully": "A new FCPXML has been exported successfully.",
         "angle": "Angle",
         "angle3": "ANG",
         "angles": "Angles",
@@ -132,6 +133,7 @@
         "batchExportNotShowing": "Unable to show the Export Dialog, which has aborted the Batch Export.\n\nPlease try again.",
         "batchExportProxyFilesDetected": "Proxy files were detected, which has aborted the Batch Export.\n\nProxy files can be ignored via the Batch Export Preferences if required.",
         "batchExportUnexpectedAlert": "An unexpected alert appeared while opening the Export dialog.\n\nPlease try again.",
+        "batchProcessFolder": "Batch Process Folder",
         "batchRename": "Batch Rename",
         "batchRenameBrowserFail": "The Batch Rename tool could not open the Browser.\n\nPlease open the Browser and try again.",
         "batchRenameFailed": "Batch Rename Failed",
@@ -246,6 +248,8 @@
         "colorWheel4": "Colr",
         "colorWheels": "Color Wheels",
         "colorWheels_group": "Color Wheels",
+        "columnContainingNewTitle": "Column containing new title",
+        "columnContainingOriginalTitle": "Column containing original title",
         "commandEditorShortcut": "Command Editor Shortcut",
         "commandLineTool": "Command Line Tool",
         "commandPost_group": "CommandPost",
@@ -353,6 +357,7 @@
         "core_tangent_os_sound_label": "Tangent: macOS Sound Controls",
         "core_tangent_os_window_label": "Tangent: Windows Management",
         "core_tangent_prefs_label": "Tangent: Preferences",
+        "core_toolbox_manager_label": "Toolbox: Manager",
         "core_tools_caffeinate_label": "Prevent Mac from Sleeping",
         "core_touchbar_banks_label": "Touchbar: Banks",
         "core_touchbar_manager_label": "Manager: Touch Bar",
@@ -560,6 +565,7 @@
         "cropTypes": "Crop Types",
         "crossDissolve": "Cross Dissolve",
         "crossHair": "Cross Hair",
+        "csvOptions": "CSV Options",
         "currentApplication": "Current Application",
         "currentBank": "Current Bank",
         "currentDevice": "Current Device",
@@ -679,6 +685,8 @@
         "exclusion9": "Exclusion",
         "executeLuaCodeSnippet": "Execute Lua Code Snippet",
         "expandAudio": "Expand Audio",
+        "exportCSV": "Export CSV",
+        "exportFCPXML": "Export FCPXML",
         "exportSettings": "Export Settings",
         "exposure": "Exposure",
         "extendEdit": "Extend Edit",
@@ -687,6 +695,7 @@
         "fadeInType": "Fade In Type",
         "fadeOutType": "Fade Out Type",
         "failedToChangeLanguage": "Unable to change Final Cut Pro's language.",
+        "failedToProcessTheCSVFile": "Failed to process the CSV file.",
         "failedToSwitchBackToFinalCutPro": "Failed to switch back to Final Cut Pro.",
         "family": "Family",
         "favorites": "Favorites",
@@ -733,6 +742,10 @@
         "fcpx_videoEffect_action": "Video Effects",
         "fcpx_widgets_action": "Touch Bar Widgets",
         "fcpxmlEditor": "FCPXML Editor",
+        "fcpxmlTitles": "FCPXML Titles",
+        "fcpxmlTitlesProcessor": "FCPXML Titles Processor",
+        "fcpxmlTitlesProcessorDescriptionLineOne": "This utility allows you update the titles within a FCPXML, based on new data from a CSV file.",
+        "fcpxmlTitlesProcessorDescriptionLineTwo": "You can also Batch Process an entire folder. To do this, the FCPXML and CSV filenames need to be identical.",
         "featureRequest": "Feature Request",
         "feedback": "Feedback",
         "feedbackError": "The following error occurred trying to communicate with the CommandPost servers:\n\n%{message}\n\nUnfortunately your feedback was not submitted.\n\nPlease try again.",
@@ -898,6 +911,7 @@
         "finalcutpro_timeline_transitions_label": "Timeline: Transitions",
         "finalcutpro_timeline_videoeffects_label": "Timeline: Video Effects",
         "finalcutpro_timeline_zoomtoselection_label": "Timeline: Zoom to Selection",
+        "finalcutpro_toolbox_fcpxmltitles_label": "Toolbox: FCPXML Titles",
         "finalcutpro_touchbar_manager_label": "Manager: Touch Bar",
         "finalcutpro_touchbar_virtual_label": "Virtual Touch Bar",
         "finalcutpro_touchbar_widgets_colorboard_label": "Widget: Color Board",
@@ -1020,6 +1034,7 @@
         "horizontalTimelineScroll": "Horizontal Timeline Scroll",
         "horizontalTimelineScrollDescription": "Scrolls the timeline horizontally using 7-bit or 14-bit MIDI commands.",
         "howCanWeHelp": "How can we help you?",
+        "howeverThereWereSomeTitlesThatCouldNotBeFoundInTheCSV": "However, there were some titles that could not be found in the CSV",
         "hud": "HUD",
         "hudDropZoneText": "Drag any item from the Browser to here to load it in the below FCPXML Editor",
         "hue": "Hue",
@@ -1040,6 +1055,7 @@
         "ignoreApplication": "Ignore Application",
         "ignoreBackgroundTasks": "Ignore Background Tasks Warning",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore ESC Key when Final Cut Pro is Fullscreen",
+        "ignoreFirstRow": "Ignore first row",
         "ignoreInsertedCameraCards": "Ignore Inserted Camera Cards",
         "ignoreInvalidCaptions": "Ignore Invalid Captions Warning",
         "ignoreMissingEffects": "Ignore Missing & Offline Files Warning",
@@ -1075,7 +1091,9 @@
         "introTagLine": "Workflow Toolkit for Professional Editors",
         "introText": "Thank you for installing CommandPost. This guide will help you set things up.",
         "invalidAPIKeysSupplied": "Invalid API Keys Supplied",
+        "invalidColumnsSelected": "Invalid columns selected.",
         "invalidFCPUIElement": "Invalid User Interface Element",
+        "invalidFCPXMLFile": "Invalid FCPXML File.",
         "invalidProwlAPIKey": "Invalid Prowl API Key",
         "invalidSearchField": "The search field looks invalid.",
         "invalidSearchFieldDescription": "Please check what you've written in the search field and try again.",
@@ -1139,6 +1157,8 @@
         "linearDodge9": "LinDodg",
         "linearLight": "Linear Light",
         "linearLight9": "LinLight",
+        "loadCSVData": "Load CSV Data",
+        "loadFCPXMLTemplate": "Load FCPXML Template",
         "loadFromPasteboard": "Load from Pasteboard",
         "localMachine": "Local Machine",
         "localPasteboardHistory": "Local Pasteboard History",
@@ -1242,14 +1262,18 @@
         "new": "New",
         "newFCPXMLForFinalCutPro": "New Media for Final Cut Pro",
         "newPluginDetected": "New Plugin Detected",
+        "newTitle": "New Title",
+        "newTitleFromCSV": "New Title (from CSV)",
         "next": "Next",
         "nine": "9",
         "no": "No",
         "noActionAssignedToThisButton": "No action assigned to this button.",
+        "noCSVDataDetected.": "No CSV Data detected.",
         "noDestinationFolderSelected": "No Destination Folder Selected",
         "noDestinationPresetSelected": "No Destination Preset Selected",
         "noDevicesDetected": "No Devices Detected",
         "noFCPUIElementDetected": "No existing Final Cut Pro User Interface Element Registered",
+        "noFCPXMLTemplateDetected": "No FCPXML Template detected.",
         "noGeneratorShortcut": "There is no Generator assigned to this shortcut.\n\nYou can assign Shortcuts via the CommandPost menu bar.",
         "noiseRemoval": "Noise Removal",
         "noKeyboardShortcutsInKeywordEditor": "There doesn't appear to be any Keyword Shortcuts allocated in the Keyword Editor.",
@@ -1270,6 +1294,7 @@
         "noteOn": "Note On",
         "notes": "Notes",
         "notesLocation": "Notes Location",
+        "nothingLoaded": "Nothing loaded",
         "notificationsPanelLabel": "Notifications",
         "notificationsPanelTooltip": "Notifications Preferences",
         "notificationTestFailed": "Notification Test Failed",
@@ -1307,6 +1332,8 @@
         "organize": "Organize",
         "originalClipName": "Original Clip Name",
         "originalOptimised": "Original/Optimised",
+        "originalTitle": "Original Title",
+        "originalTitleFromFCPXML": "Original Title (from FCPXML)",
         "out": "Out",
         "outline": "Outline",
         "outroText": "You can access CommandPost via the satellite icon<br />in your system’s menubar at the top right corner of the screen.",
@@ -1351,13 +1378,20 @@
         "playPowerChimeSound": "Play chime sound when laptop power is connected",
         "playSelection": "Play Selection",
         "playToEnd": "Play to End",
+        "pleaseCheckTheContentsOfTheCSVFileAndTryAgain": "Please check the contents of the CSV file and try again.",
         "pleaseDisconnectAndReconnectYourLoupedeckCT": "Please disconnect and reconnect your Loupedeck CT.",
         "pleaseEnterAPrefix": "Please enter a prefix",
+        "pleaseLoadAValidCSVFileAndTryAgain": "Please load a valid CSV file and try again.",
+        "pleaseLoadAValidFCPXMLTemplateAndTryAgain": "Please load a valid FCPXML Template and try again.",
         "pleasePickAFolderToUseAsAFavourite": "Please pick a folder to use as a favourite",
+        "pleaseSelectACSVFile": "Please select a CSV file",
+        "pleaseSelectAFCPXMLTemplate": "Please select a FCPXML Template",
         "pleaseSelectAFileToImport": "Please select a file to import",
+        "pleaseSelectAFolderToBatchProcess": "Please select a folder to Batch Process",
         "pleaseSelectAFolderToExportTo": "Please select a folder to export to",
         "pleaseSelectAnApplication": "Please select an application",
         "pleaseSelectAnIcon": "Please select an icon:",
+        "pleaseSelectAnOutputDirectory": "Please select an output directory",
         "pleaseSelectATitle": "Please select a title in the timeline and try again.",
         "pleaseSelectSingleClipInTimeline": "Please select a single clip in the Timeline.",
         "pleaseTryAgain": "Please try again.",
@@ -1408,6 +1442,7 @@
         "previous": "Previous",
         "privacy": "Privacy",
         "problemProcessingCSV": "There was a problem processing the CSV file. Are you sure it's valid?",
+        "processingOptions": "Processing Options",
         "programChange": "Program Change",
         "provideFeedback": "Provide Feedback",
         "provideFeedbackOrReportBug": "Provide Feedback or Report Bug",
@@ -1435,6 +1470,7 @@
         "reload": "Reload",
         "rememberLastQuery": "Remember Last Query",
         "removeFavouriteKeyword": "Remove Favourite Keyword",
+        "removeLineBreaks": "Remove line breaks",
         "renameButton": "Rename Button",
         "renameButtonQuestion": "What would you like to rename this button to?",
         "renameClip": "Rename Clip",
@@ -1738,6 +1774,9 @@
         "textPasteboardHistory": "Text Pasteboard History",
         "textToSpeechDestination": "Please select where you want to save your audio files:",
         "texture": "Texture",
+        "theCSVHasBeenExportedSuccessfully": "The CSV has been exported successfully",
+        "theOriginalAndNewColumnsCannotBeTheSamePleaseCheckYourSettingsAndTryAgain": "The original and new columns cannot be the same. Please check your settings and try again.",
+        "theSuppliedFCPXMLDidNotPassDtdValidationPleaseCheckThatTheFCPXMLSuppliedIsValidAndTryAgain": "The supplied FCPXML did not pass DTD validation. Please check that the FCPXML supplied is valid and try again.",
         "thisCanTakeSeveralMinutes": "This can take several minutes",
         "thisIsATest": "This is a test",
         "three": "3",
@@ -1798,6 +1837,7 @@
         "trimToggle": "Trim Toggle",
         "trimToggleDescription": "Hold down MIDI button for Trim Tool, then release for Select Tool.",
         "trimToPlayhead": "Trim To Playhead",
+        "trimWhitespace": "Trim whitespace",
         "turnLeftAction": "Turn Left Action",
         "turnLeftDown": "Turn Left/Down",
         "turnRightAction": "Turn Right Action",
@@ -1820,6 +1860,7 @@
         "up": "Up",
         "update": "Update",
         "updateAvailable": "Update Available",
+        "updatedTitles": "Updated Titles",
         "updateEffectsListFailed": "Unfortunately the Effects List was not successfully updated.",
         "useBetterQualityInAnglesViewer": "Use Better Quality in Angles Viewer (requires restart)",
         "useCustomFilename": "Use Custom Filename",
