--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -57,6 +57,7 @@
         "anchor": "Anchor",
         "and": "and",
         "aNewFCPXMLHasBeenExportedSuccessfully": "A new FCPXML has been exported successfully.",
+        "theBatchOfFCPXMLsHasBeenExportedSuccessfully": "The batch of FCPXMLs has been exported successfully.",
         "angle": "Angle",
         "angle3": "ANG",
         "angles": "Angles",
@@ -1774,7 +1775,7 @@
         "textPasteboardHistory": "Text Pasteboard History",
         "textToSpeechDestination": "Please select where you want to save your audio files:",
         "texture": "Texture",
-        "theCSVHasBeenExportedSuccessfully": "The CSV has been exported successfully",
+        "theCSVHasBeenExportedSuccessfully": "The CSV has been exported successfully.",
         "theOriginalAndNewColumnsCannotBeTheSamePleaseCheckYourSettingsAndTryAgain": "The original and new columns cannot be the same. Please check your settings and try again.",
         "theSuppliedFCPXMLDidNotPassDtdValidationPleaseCheckThatTheFCPXMLSuppliedIsValidAndTryAgain": "The supplied FCPXML did not pass DTD validation. Please check that the FCPXML supplied is valid and try again.",
         "thisCanTakeSeveralMinutes": "This can take several minutes",
