--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -57,7 +57,6 @@
         "anchor": "Anchor",
         "and": "and",
         "aNewFCPXMLHasBeenExportedSuccessfully": "A new FCPXML has been exported successfully.",
-        "theBatchOfFCPXMLsHasBeenExportedSuccessfully": "The batch of FCPXMLs has been exported successfully.",
         "angle": "Angle",
         "angle3": "ANG",
         "angles": "Angles",
@@ -695,6 +694,8 @@
         "face": "Face",
         "fadeInType": "Fade In Type",
         "fadeOutType": "Fade Out Type",
+        "failedToAddCustomApplication": "Failed to add Custom Application",
+        "failedToAddCustomApplicationDescription": "CommandPost was unable to determine the bundle identifier or diplay name for the custom application.\n\nPlease provide feedback to the CommandPost team so that they can come up with a fix.",
         "failedToChangeLanguage": "Unable to change Final Cut Pro's language.",
         "failedToProcessTheCSVFile": "Failed to process the CSV file.",
         "failedToSwitchBackToFinalCutPro": "Failed to switch back to Final Cut Pro.",
@@ -1775,6 +1776,7 @@
         "textPasteboardHistory": "Text Pasteboard History",
         "textToSpeechDestination": "Please select where you want to save your audio files:",
         "texture": "Texture",
+        "theBatchOfFCPXMLsHasBeenExportedSuccessfully": "The batch of FCPXMLs has been exported successfully.",
         "theCSVHasBeenExportedSuccessfully": "The CSV has been exported successfully.",
         "theOriginalAndNewColumnsCannotBeTheSamePleaseCheckYourSettingsAndTryAgain": "The original and new columns cannot be the same. Please check your settings and try again.",
         "theSuppliedFCPXMLDidNotPassDtdValidationPleaseCheckThatTheFCPXMLSuppliedIsValidAndTryAgain": "The supplied FCPXML did not pass DTD validation. Please check that the FCPXML supplied is valid and try again.",
